fix: philosophy page video row spacing

--- a/src/styles/_philosophy.scss
+++ b/src/styles/_philosophy.scss
@@ -17,6 +17,11 @@
   }
 }
 
+.post-video-row {
+  margin-top: rem(80px); //IE fallback
+  --space: 80px;
+}
+
 //---------------------------------------
 // Principles page
 //---------------------------------------
